--- a/themes/foundation/templates/html/nexus/hero.html
+++ b/themes/foundation/templates/html/nexus/hero.html
@@ -7,16 +7,19 @@
     <div class="large-9">
         <h3>Реплики перед началом матча</h3>
         <ul class="hero-speech intro">
-            <li data-ng-repeat="item in nexusData.selectedItem.Speech | filter:{Intro: 1} |orderBy:'-To.id'"
-                ng-init="targetHero = getHeroById(item.To.id)" >
+            <li data-ng-repeat="item in nexusData.selectedItem.Speech | filter:{Intro: 1} |orderBy:'-To.id'">
                 <div data-ng-if="item.Type == 'Question'" >
                     <div class="question">
                         <a class="element-link" data-ng-href="{{ item.owner.Url }}" title="{{ item.owner.TitleRU }}">
                             <div class="element-link-image">
                                 <img class="icon-frame frame-56" data-ng-src="{{ item.OwnerIconSrc }}" />
                             </div>
-                            <span class="element-link-title">{{ item.TitleRU }}</span>
                         </a>
+                        <div data-ng-if="item.TagIconSrc" class="right element-link">
+                            <div class="element-link-image">
+                                <img class="icon-frame frame-56" data-ng-src="{{ item.TagIconSrc}}" />
+                            </div>
+                        </div>
                         <div class="phrase" data-ng-bind-html="item.Phrase | unsafe"></div>
                         <div class="original-phrase" data-ng-bind-html="item.OriginalPhrase | unsafe"></div>
                     </div>
@@ -25,7 +28,6 @@
                             <div class="element-link-image">
                                 <img class="icon-frame frame-56" data-ng-src="{{ item.MateIconSrc }}" />
                             </div>
-                            <span class="element-link-title">{{ item.TitleRU }}</span>
                         </a>
                         <div class="phrase" data-ng-bind-html="item.MatePhrase | unsafe"></div>
                         <div class="original-phrase" data-ng-bind-html="item.MateOriginalPhrase | unsafe"></div>
@@ -37,7 +39,6 @@
                             <div class="element-link-image">
                                 <img class="icon-frame frame-56" data-ng-src="{{ item.MateIconSrc }}" />
                             </div>
-                            <span class="element-link-title">{{ item.TitleRU }}</span>
                         </a>
                         <div class="phrase" data-ng-bind-html="item.MatePhrase | unsafe"></div>
                         <div class="original-phrase" data-ng-bind-html="item.MateOriginalPhrase | unsafe"></div>
@@ -47,8 +48,12 @@
                             <div class="element-link-image">
                                 <img class="icon-frame frame-56" data-ng-src="{{ item.OwnerIconSrc }}" />
                             </div>
-                            <span class="element-link-title">{{ item.TitleRU }}</span>
                         </a>
+                        <div data-ng-if="item.TagIconSrc" class="right element-link">
+                            <div class="element-link-image">
+                                <img class="icon-frame frame-56" data-ng-src="{{ item.TagIconSrc}}" />
+                            </div>
+                        </div>
                         <div class="phrase" data-ng-bind-html="item.Phrase | unsafe"></div>
                         <div class="original-phrase" data-ng-bind-html="item.OriginalPhrase | unsafe"></div>
                     </div>
@@ -60,6 +65,11 @@
         <h3>Реплики при клике</h3>
         <ul class="hero-speech">
             <li data-ng-repeat="item in nexusData.selectedItem.Speech | filter:{Type: 'Pissed'} | orderBy:'ID'">
+                <div data-ng-if="item.SkinOwnerID != 0" class="element-link">
+                    <div class="element-link-image">
+                        <img class="icon-frame frame-56" data-ng-src="{{ item.OwnerIconSrc }}" />
+                    </div>
+                </div>
                 <div class="phrase" data-ng-bind-html="item.Phrase | unsafe"></div>
                 <div class="original-phrase" data-ng-bind-html="item.OriginalPhrase | unsafe"></div>
             </li>
@@ -69,6 +79,11 @@
         <h3>Реплики при убийстве</h3>
         <ul class="hero-speech">
             <li data-ng-repeat="item in nexusData.selectedItem.Speech | filter:{Type: 'WhenKill'} | orderBy:'-To.id'">
+                <div class="element-link">
+                    <div class="element-link-image">
+                        <img class="icon-frame frame-56" data-ng-src="{{ item.OwnerIconSrc }}" />
+                    </div>
+                </div>
                 <div class="left">
                     <div class="phrase" data-ng-bind-html="item.Phrase | unsafe"></div>
                     <div class="original-phrase" data-ng-bind-html="item.OriginalPhrase | unsafe"></div>
@@ -77,7 +92,6 @@
                     <div class="element-link-image">
                         <img class="icon-frame frame-56" data-ng-src="{{ item.mate.IconSrc }}" />
                     </div>
-                    <span class="element-link-title">{{ item.TitleRU }}</span>
                 </a>
             </li>
         </ul>
