HOTS выводить иконку тэга, если реплика обращена тегу. Также в разделе убийств и кликов мыши выводится иконка облика, если фраза-шуточка принадлежит облику

--- a/themes/foundation/templates/html/nexus/hero.html
+++ b/themes/foundation/templates/html/nexus/hero.html
@@ -93,6 +93,11 @@
                         <img class="icon-frame frame-56" data-ng-src="{{ item.mate.IconSrc }}" />
                     </div>
                 </a>
+                <div data-ng-if="item.TagIconSrc" class="right element-link">
+                    <div class="element-link-image">
+                        <img class="icon-frame frame-56" data-ng-src="{{ item.TagIconSrc}}" />
+                    </div>
+                </div>
             </li>
         </ul>
     </div>
