--- a/themes/foundation/templates/html/nexus/hero.html
+++ b/themes/foundation/templates/html/nexus/hero.html
@@ -1,18 +1,10 @@
 
 <h1>{{ nexusData.selectedItem.TitleRU }} <small data-ng-bind="nexusData.selectedItem.IdentityTitle"></small></h1>
-<div class="hero-navigation-panel">
-    <ul>
-        <li><a rel="tag" data-ng-click="scrollTo('intro-speech')">Intro</a></li>
-        <li><a rel="tag" data-ng-click="scrollTo('boast-speech')">Boast</a></li>
-        <li><a rel="tag" href="#pissed-speech">Pissed</a></li>
-        <li><a rel="tag" href="#kill-speech">When Kill</a></li>
-    </ul>
-</div>
 <div class="large-12">
     <p data-ng-bind-html="nexusData.selectedItem.Content | unsafe"></p>
-    <div id="intro-speech" class="large-9">
+    <div class="large-9">
         <h3 data-ng-if="introSpeech.length">Вступление</h3>
-        <ul class="hero-speech intro">
+        <ul id="intro-speech" class="hero-speech intro">
             <li data-ng-repeat="item in introSpeech = nexusData.selectedItem.Speech | filter:{Intro: 1} |orderBy:['-To.id', '-ToSeveral.id']">
                 <div data-ng-if="item.Type == 'Question'" >
                     <div class="question">
@@ -67,9 +59,9 @@
             </li>
         </ul>
     </div>
-    <div id="boast-speech" class="large-9">
+    <div class="large-9">
         <h3 data-ng-if="boastSpeech.length">Хвастовство перед боем</h3>
-        <ul class="hero-speech">
+        <ul id="boast-speech" class="hero-speech">
             <li data-ng-repeat="item in boastSpeech = nexusData.selectedItem.Speech | filter:{Type: 'Boast'} | orderBy:'ID'">
                 <div data-ng-if="item.SkinOwnerID != 0" class="element-link">
                     <div class="element-link-image">
@@ -81,9 +73,9 @@
             </li>
         </ul>
     </div>
-    <div id="pissed-speech" class="large-9">
+    <div class="large-9">
         <h3 data-ng-if="pissedSpeech.length">Реплики при клике</h3>
-        <ul class="hero-speech">
+        <ul id="pissed-speech" class="hero-speech">
             <li data-ng-repeat="item in pissedSpeech = nexusData.selectedItem.Speech | filter:{Type: 'Pissed'} | orderBy:'ID'">
                 <div data-ng-if="item.SkinOwnerID != 0" class="element-link">
                     <div class="element-link-image">
@@ -97,7 +89,7 @@
     </div>
     <div class="large-9">
         <h3 data-ng-if="killSpeech.length">Реплики при убийстве</h3>
-        <ul id="kill-speech"  class="hero-speech">
+        <ul id="kill-speech" class="hero-speech">
             <li data-ng-repeat="item in killSpeech = nexusData.selectedItem.Speech | filter:{Type: 'WhenKill'} | orderBy:['-To.id', '-ToSeveral.id']">
                 <div class="element-link">
                     <div class="element-link-image">
