HOTS +CARDS рефакторинг. добавил возможность привязывать реплику к реплике

--- a/themes/foundation/templates/html/card-game/card.html
+++ b/themes/foundation/templates/html/card-game/card.html
@@ -1,9 +1,9 @@
-<h1 data-ng-bind-html="cardGameData.selectedCard.TitleRU | unsafe"></h1>
+<h1 data-ng-bind-html="cardGameData.selectedItem.TitleRU | unsafe"></h1>
 <div class="medium-12">
     <a data-ng-href="{{ cardGameData.pageUrl }}" class="small button secondary all" title="Вернуться к списку"><i class="fi-thumbnails"></i></a>
 </div>
 <div class="medium-4 column art-container">
-    <img data-ng-src="{{ cardGameData.selectedCard.CoverCard.Filename }}" />
+    <img data-ng-src="{{ cardGameData.selectedItem.CoverCard.Filename }}" />
 </div>
 <div class="medium-3 column">
     <div class="book-info">
@@ -11,21 +11,21 @@
             <dt>Набор:</dt>
             <dd data-ng-bind="cardGameData.title">
             </dd>
-            <dt>Тип:</dt><dd localize="{{ cardGameData.selectedCard.Type }}"></dd>
-            <dt>Класс:</dt><dd localize="{{ cardGameData.selectedCard.Class }}"></dd>
-            <dt>Качество:</dt><dd localize="{{ cardGameData.selectedCard.Rarity }}"></dd>
-            <dt>Художник :</dt><dd data-ng-bind="cardGameData.selectedCard.Artist.TitleEN"></dd>
+            <dt>Тип:</dt><dd localize="{{ cardGameData.selectedItem.Type }}"></dd>
+            <dt>Класс:</dt><dd localize="{{ cardGameData.selectedItem.Class }}"></dd>
+            <dt>Качество:</dt><dd localize="{{ cardGameData.selectedItem.Rarity }}"></dd>
+            <dt>Художник :</dt><dd data-ng-bind="cardGameData.selectedItem.Artist.TitleEN"></dd>
         </dl>
     </div>
 </div>
 
 <div class="medium-5 column">
-    <a target="_blank" data-ng-show="cardGameData.selectedCard.LinkToArt.ID" data-ng-href="{{ cardGameData.selectedCard.LinkToArt.Link }}">Ссылка на арт</a>
+    <a target="_blank" data-ng-show="cardGameData.selectedItem.LinkToArt.ID" data-ng-href="{{ cardGameData.selectedItem.LinkToArt.Link }}">Ссылка на арт</a>
     <br/>
-    <img data-ng-src="{{ cardGameData.selectedCard.LinkToArt.PageSize }}" />
+    <img data-ng-src="{{ cardGameData.selectedItem.LinkToArt.PageSize }}" />
 </div>
 <div class="medium-12 column">
-    <div data-ng-bind-html="cardGameData.selectedCard.Rules | unsafe"></div>
-    <div data-ng-bind-html="cardGameData.selectedCard.Flavor | unsafe"></div>
+    <div data-ng-bind-html="cardGameData.selectedItem.Rules | unsafe"></div>
+    <div data-ng-bind-html="cardGameData.selectedItem.Flavor | unsafe"></div>
 </div>
 <hr/>
