HOTS +CARDS bug fix

--- a/themes/foundation/templates/html/card-game/list.html
+++ b/themes/foundation/templates/html/card-game/list.html
@@ -1,4 +1,4 @@
-<h1>{{ title }}</h1>
+<h1>{{ pageConfig.title }}</h1>
 <div class="small-12 medium-12 columns">
     <div ng-show="cardGameData.totalSize > 1" class="small-12 columns">
         <label for="searchByTitle">Поиск</label>
