--- a/themes/foundation/templates/html/card-game/card.html
+++ b/themes/foundation/templates/html/card-game/card.html
@@ -1,6 +1,6 @@
 <h1 data-ng-bind-html="cardGameData.selectedItem.TitleRU | unsafe"></h1>
 <div class="medium-12">
-    <a data-ng-href="{{ cardGameData.pageUrl }}" class="small button secondary all" title="Вернуться к списку"><i class="fi-thumbnails"></i></a>
+    <a data-ng-href="{{ pageConfig.url }}" class="small button secondary all" title="Вернуться к списку"><i class="fi-thumbnails"></i></a>
 </div>
 <div class="medium-4 column art-container">
     <img data-ng-src="{{ cardGameData.selectedItem.CoverCard.Filename }}" />
