HOTS +CARD задействовал Flyweight Pattern, чтобы съэкономить память браузера. поправил верстку.

--- a/themes/foundation/css/hots.css
+++ b/themes/foundation/css/hots.css
@@ -356,6 +356,9 @@
   background-position: -184px 0
 }
 
+.speech-section {
+  float: left;
+}
 .hero-speech {
   list-style-type: none;
   display: block;
