MAIN ссылки на страницы героев в информере хотс

--- a/themes/foundation/css/common.css
+++ b/themes/foundation/css/common.css
@@ -30,6 +30,10 @@
     right: 0;
     margin: auto;
 }
+.top-bar-section ul li > a sup {
+    color: #0EFF00;
+    line-height: 0;
+}
 .top-bar-section ul li.game-icon > a {
     text-transform: uppercase;
 }
